# open-lakehouse-projects

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yml  dev.yml  prod.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generic_tests.sql
dbt/models/: schema.yml
dbt/models/bronze/: raw_source_a.sql
dbt/models/gold/: dim_source_a.sql
dbt/models/silver/: stg_source_a.sql
docs/architecture/: overview.md
docs/guides/: getting_started.md
infrastructure/docker/: docker-compose.yml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/dev/: terraform.tfvars
infrastructure/terraform/environments/prod/: terraform.tfvars
infrastructure/terraform/modules/compute/: main.tf
infrastructure/terraform/modules/storage/: main.tf
notebooks/data_quality/: 02_silver_quality.ipynb
notebooks/exploratory/: 01_bronze_eda.ipynb
pipelines/airflow/dags/: bronze_ingestion.py  gold_aggregation.py  silver_processing.py
src/: __init__.py  cli.py
src/catalog/: __init__.py  client.py
src/ingestion/: __init__.py  base.py  file_ingester.py
src/processing/: __init__.py  base.py  gold_processor.py  silver_processor.py
src/serving/: __init__.py
src/utils/: __init__.py  logging.py  schema.py  spark.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/ingestion/: test_base_ingester.py
tests/unit/processing/: __init__.py  test_processors.py
