[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-lakehouse"
version = "0.1.0"
description = "Open Lakehouse Project – a reusable template for building a modern data lakehouse"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5",
    "delta-spark>=3.2",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "boto3>=1.34",
    "great-expectations>=0.18",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "loguru>=0.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
airflow = [
    "apache-airflow>=2.9",
]
dbt = [
    "dbt-core>=1.8",
    "dbt-spark>=1.8",
]

[project.scripts]
lakehouse = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
